Реализовал изменение, удаление заказа и смену статусов + проверки на доступность удаления